--- a/app/views/countries/_form.html.erb
+++ b/app/views/countries/_form.html.erb
@@ -19,6 +19,10 @@
     <%= f.label :region %><br />
     <%= f.text_field :region %>
   </div>
+    <div class="field">
+    <%= f.label :alias %><br />
+    <%= f.text_field :alias %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
