--- a/app/views/countries/index.html.erb
+++ b/app/views/countries/index.html.erb
@@ -9,6 +9,7 @@
   <tr>
     <th>Name</th>
     <th>Region</th>
+     <th>Alias</th>
  
   </tr>
 
@@ -16,6 +17,8 @@
   <tr>
     <td><%= country.name %></td>
     <td><%= country.region %></td>
+    <td><%= country.alias %></td>
+
     <td><%= link_to 'Show', country %></td>
     <td><%= link_to 'Edit', edit_country_path(country) %></td>
     <td><%= link_to 'Destroy', country, method: :delete, data: { confirm: 'Are you sure?' } %></td>
