--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -9,6 +9,10 @@
   <b>Region:</b>
   <%= @country.region %>
 </p>
+<p>
+  <b>Alias:</b>
+  <%= @country.alias %>
+</p>
 
 
 <%= link_to 'Edit', edit_country_path(@country) %> |
