--- a/app/views/file_stats/index.html.erb
+++ b/app/views/file_stats/index.html.erb
@@ -1,3 +1,11 @@
+
+<h1 id="notice"><%= notice %></h1>
+<%=paginate @file_stats %>
+
+<h2>Number of records <%=@file_stats_count %></h2>
+
+
+
 <h1>Listing file_stats</h1>
 
 <table>
