--- a/app/views/fund_records/_form.html.erb
+++ b/app/views/fund_records/_form.html.erb
@@ -16,8 +16,8 @@
     <%= f.text_field :sector %>
   </div>
   <div class="field">
-    <%= f.label :fund %><br />
-    <%= f.text_field :fund %>
+    <%= f.label :fund_name %><br />
+    <%= f.text_field :fund_name %>
   </div>
   <div class="field">
     <%= f.label :d1 %><br />
