--- a/app/views/fund_records/index.html.erb
+++ b/app/views/fund_records/index.html.erb
@@ -43,7 +43,7 @@
   <tr>
     <td><%= fund_record.creation_date %></td>
     <td><%= fund_record.sector %></td>
-    <td><%= fund_record.fund %></td>
+    <td><%= fund_record.fund_name %></td>
    
     <td><%= fund_record.wr4 %></td>
     <td><%= fund_record.wr12 %></td>
