--- a/app/views/funds/index.html.erb
+++ b/app/views/funds/index.html.erb
@@ -21,7 +21,7 @@
   <tr>
     <td><%= fund.name %></td>
     <td><%= fund.sector %></td>
-    <td><%= fund.country %></td>
+    <td><%= fund.country_name %></td>
     <td><%= fund.continent %></td>
     <td><%= link_to 'Show', fund %></td>
     <td><%= link_to 'Edit', edit_fund_path(fund) %></td>
