--- a/app/views/funds/_form.html.erb
+++ b/app/views/funds/_form.html.erb
@@ -20,8 +20,8 @@
     <%= f.text_field :sector %>
   </div>
   <div class="field">
-    <%= f.label :country %><br />
-    <%= f.text_field :country %>
+    <%= f.label :country_name %><br />
+    <%= f.text_field :country_name %>
   </div>
   <div class="field">
     <%= f.label :continent %><br />
