--- a/app/views/funds/index.html.erb
+++ b/app/views/funds/index.html.erb
@@ -25,7 +25,7 @@
 </table>
 
 
-<h1>Countries with investment funds</h1>
+<h1>Regions with investment funds</h1>
 
 <table class="table-bordered" >
   <tr>
