--- a/app/views/file_stats/index.html.erb
+++ b/app/views/file_stats/index.html.erb
@@ -8,12 +8,13 @@
 
 <h1>Listing file_stats</h1>
 
-<table>
+<table class="table-bordered" >
   <tr>
     <th>Records</th>
     <th>Column size</th>
     <th>Creation date</th>
     <th>Time to load</th>
+    <th> Time point </th>
     <th></th>
     <th></th>
     <th></th>
@@ -25,6 +26,8 @@
     <td><%= file_stat.column_size %></td>
     <td><%= file_stat.creation_date %></td>
     <td><%= file_stat.time_to_load %></td>
+    <td><%= file_stat.time_point.time_period %></td>
+
     <td><%= link_to 'Show', file_stat %></td>
     <td><%= link_to 'Edit', edit_file_stat_path(file_stat) %></td>
     <td><%= link_to 'Destroy', file_stat, method: :delete, data: { confirm: 'Are you sure?' } %></td>
