added sector and created fact table in fund records

--- a/app/views/fund_records/index.html.erb
+++ b/app/views/fund_records/index.html.erb
@@ -19,6 +19,8 @@
 <h2>Total number of records <%=@all_records %> </h2>
 <h2>Number of records with geographies <%=@record_count %></h2>
 
+<h2>Download record set <%= link_to "download", fund_records_downloads_path %>
+
 
 <h1>Listing fund_records</h1>
 
