--- a/app/views/funds/index.html.erb
+++ b/app/views/funds/index.html.erb
@@ -4,6 +4,9 @@
 
 <h2>Number of records <%=@funds_count %></h2>
 
+
+<h2>Download record set <%= link_to "download", funds_downloads_path %>
+
 <h2>Countries with investment funds</h2>
 
 <table class="table-bordered" >
