--- a/app/views/regions/index.html.erb
+++ b/app/views/regions/index.html.erb
@@ -1,4 +1,5 @@
 <h1>Listing regions</h1>
+<h2>Download record set <%= link_to "download", regions_downloads_path %>
 
 <table class="table-bordered">
   <tr>
