--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
   <script src="https://code.highcharts.com/maps/modules/data.js"></script>
   <script src="https://code.highcharts.com/mapdata/custom/world.js"></script>
   <script src="https://code.highcharts.com/mapdata/custom/world-continents.js"></script>
+  <script src="https://code.highcharts.com/mapdata/custom/asia.js"></script>
   <%= csrf_meta_tags %>
 </head>
 <body>
