finalised initial loading of data and maps being shown

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,3 +1,18 @@
-// Place all the styles related to the home controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.down {
+	color: #FF0000;
+
+}
+
+.up{
+	color: #98FB98;
+
+}
+
+.stable{
+	color: #0000FF;
+}
+
+body{
+	background-color: black;
+	color: white;
+}
