--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,8 @@
   <script src="https://code.highcharts.com/mapdata/custom/world.js"></script>
   <script src="https://code.highcharts.com/mapdata/custom/world-continents.js"></script>
   <script src="https://code.highcharts.com/mapdata/custom/asia.js"></script>
+  <script src="https://code.highcharts.com/mapdata/custom/north-america-no-central.js"></script>
+  <script src="https://code.highcharts.com/mapdata/custom/europe.js"></script>
   <%= csrf_meta_tags %>
 </head>
 <body>
