added functionality to search investment sectors

--- a/app/views/home/show_area.html.erb
+++ b/app/views/home/show_area.html.erb
@@ -1,52 +1,2 @@
-    
+<%= render "main" %>      
 
-<div class="row">
-	<div class= "col-md-2">
-		<h2>Selection</h2>
-		<h3>Geographies</h3>
-
-		<%= hidden_field_tag "map_to_use", @view_item  %>
-
-
-		<nav>
-			<ul>
-			<li><%= link_to "Home", "/home/show_area?continent=home", class: "up" %></li>
-				<% if @continents.count == 1 %>
-					<li><%= link_to @continents[0], "#", class: @stats[@continents[0]][2], data:{toggle: "tooltip", placement: "right"}, title: @stats[@continents[0]][0] %><span>(<%= @stats[@continents[0]][1]%>)</span></li>
-				<% else %>
-					<% @continents.each do |c| %>
-						<li><%= link_to c, "/home/show_area?continent="+c, class: @stats[c][2], data:{toggle: "tooltip", placement: "right"}, title: @stats[c][0] %><span>(<%=@things[c]["value"] %>)</span></li>
-				
-					<% end %>
-				<% end %>
-			</ul>
-		</nav>
-		<h3>Investment Sectors</h3>
-		<nav>
-			<ul>
-				<% @sectors.each do |s| %>
-					<li><%=link_to s, "#",class: @stats[s][2], data:{toggle: "tooltip", placement: "right"}, title: @stats[s][0]  %><span>(<%=@stats[s][1]%>)</span></li>
-				<% end %>
-			</ul>
-		</nav>
-	</div>
-
-	<div class = "col-md-6">
-		<div id="container">
-		    <div class="loading">
-		        <i class="icon-spinner icon-spin icon-large"></i>
-		        Loading data from Google Spreadsheets...
-		    </div>
-		 </div>
-	</div>
-	<div class= "col-md-4" >
-		<h2>Funds</h2>
-		<nav style="height: 500px; overflow:scroll;">
-			<ul>
-			<% @fund_records.each do |fr| %>
-				<li><%= link_to fr.fund_name, "#" %><span><%=fr.wr4 %></span></li>
-			<% end %>
-			</ul>
-		</nav>
-	</div>
-</div>
