--- a/app/views/funds/index.html.erb
+++ b/app/views/funds/index.html.erb
@@ -52,7 +52,7 @@
 
 <h2>List of funds with a country or region</h2>
 
-<table class="table-bordered" >
+<table class="table-striped" >
   <tr>
     <th>Name</th>
     <th>Sector</th>
