added some styling

--- a/app/views/home/_main.html.erb
+++ b/app/views/home/_main.html.erb
@@ -1,8 +1,8 @@
 
 <div class="row">
 	<div class= "col-sm-2">
-		<h2>Selection</h2>
-		<h3>Continents</h3>
+		<h2 >Selection</h2>
+		<h3 class="text-center">Continents</h3>
 
 		<%= hidden_field_tag "search_string", @search_string  %>
 		<%= hidden_field_tag "map_title", @title  %>
@@ -22,7 +22,7 @@
 				<% end %>
 			</ul>
 		</nav>
-		<h3>Investment Sectors</h3>
+		<h3 class="text-center">Investment Sectors</h3>
 		<nav>
 			<ul>
 				<% @sectors.each do |s| %>
