--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -80,3 +80,79 @@ ul>li{
     cursor: pointer;
 
 }
+
+.scrolltable {
+      overflow-x: scroll;
+      height: 100%;
+      display: flex;
+      display: -webkit-flex;
+      flex-direction: column;
+      -webkit-flex-direction: column;
+  }
+  .scrolltable > .header {
+  }
+  .scrolltable > .body {
+      /*noinspection CssInvalidPropertyValue*/
+      width: -webkit-fit-content;
+      overflow-y: scroll;
+      flex: 1;
+      -webkit-flex: 1;
+  }
+
+
+
+  /* an outside constraint to react against */
+  #constrainer {
+      width: 100%;
+      height: 200px;
+  }
+
+
+
+
+
+
+
+
+  #constrainer2 {
+      width: 100%;
+      overflow-x: scroll;
+  }
+  #constrainer2 table {
+      overflow-y: scroll;
+  }
+  #constrainer2 tbody {
+      overflow-x: scroll;
+      display: block;
+      height: 200px;
+  }
+  #constrainer2 thead {
+      display: table-row;
+  }
+
+
+
+
+  /* only styling below here */
+  #constrainer, #constrainer2 {
+      border: 1px solid lightgrey;
+  }
+  table {
+      border-collapse: collapse;
+  }
+  th, td {
+      border: 1px solid gray;
+  }
+  th {
+      background-color: lightgrey;
+      border-width: 1px;
+  }
+  td {
+      border-width: 1px;
+  }
+  tr:first-child td {
+      border-top-width: 0;
+  }
+  tr:nth-child(even) {
+      background-color: #eee;
+  }
