--- a/app/assets/stylesheets/fund_records.css.scss
+++ b/app/assets/stylesheets/fund_records.css.scss
@@ -1,11 +1,23 @@
 #container {
+	
     height: 500px; 
     min-width: 310px; 
     max-width: 800px; 
     margin: 0 auto; 
+    z-index: 0;
 }
 .loading {
     margin-top: 10em;
     text-align: center;
     color: gray;
+}
+
+#fund_details_show{
+	position: absolute;
+	height: 500px;
+	width: 100%;  
+    margin: 0 auto; 
+	background-color: red;
+	z-index: 10;
+	display: none;
 }
