--- a/app/views/home/_main.html.erb
+++ b/app/views/home/_main.html.erb
@@ -21,10 +21,12 @@
 	</div>
 
 	<div class = "col-sm-6">
+	<div id="fund_details_show"></div>
 		<div id="container">
 		    <div class="loading">
 		        <i class="icon-spinner icon-spin icon-large"></i>
 		        Loading data....
+		        <div id="fund_details_show"></div>
 		    </div>
 		 </div>
 
@@ -125,9 +127,9 @@
 							<% end %>
 
 							
-							 <tr class= "<%=color %>" >
+							 <tr class= "<%=color %> fund_details_row" >
 							 	<td style="display:none;"><%=fr.fund_id %></td>
-							    <td width="30%"><span class="glyphicon glyphicon-star-empty clickable-div blank-star"></span><%= link_to fr.fund_name, "#" %></td>
+							    <td width="30%"><span class="glyphicon glyphicon-star-empty clickable-div blank-star"></span><%= link_to fr.fund_name, "#", class: "fund_details_link", value: fr.fund_id %></td>
 							    <td class="text-center" width="15%"><%=fr.wr4 %>%</td>
 							    <td width="20%"><%= sec_text %></td>
 							    <td  width="25%"><%=fr.saltydog_group %></td>
@@ -173,3 +175,19 @@
 
 	</div>
 </div>
+
+	<h1>Vertical 4 steps gauge</h1>
+	<section>
+	  <div data-fill="0" class="step-gauge"></div>
+	  <div data-fill="10" class="step-gauge"></div>
+	  <div data-fill="20" class="step-gauge"></div>
+	  <div data-fill="30" class="step-gauge"></div>
+	  <div data-fill="40" class="step-gauge"></div>
+	  <div data-fill="50" class="step-gauge"></div>
+	  <div data-fill="60" class="step-gauge"></div>
+	  <div data-fill="70" class="step-gauge"></div>
+	  <div data-fill="80" class="step-gauge"></div>
+	  <div data-fill="90" class="step-gauge"></div>
+	  <div data-fill="100" class="step-gauge"></div>
+	</section>
+ </div>
