--- a/app/views/home/_main.html.erb
+++ b/app/views/home/_main.html.erb
@@ -21,12 +21,17 @@
 	</div>
 
 	<div class = "col-sm-6">
-	<div id="fund_details_show"></div>
-		<div id="container">
+	<div id="fund_details_show" >
+		<div class="col-sm-6">
+			<div class="fund_details_text">
+			</div>
+		</div>
+
+	</div>
+		<div id="map_container">
 		    <div class="loading">
 		        <i class="icon-spinner icon-spin icon-large"></i>
 		        Loading data....
-		        <div id="fund_details_show"></div>
 		    </div>
 		 </div>
 
